--- a/SPRING_Fair_Shop/sfshop_backend/order/src/main/resources/application.yml
+++ b/SPRING_Fair_Shop/sfshop_backend/order/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto:  create
+      ddl-auto: validate
     show-sql: true
 
   datasource:
