--- a/SPRING_Fair_Shop/sfshop_backend/oauth2-server/pom.xml
+++ b/SPRING_Fair_Shop/sfshop_backend/oauth2-server/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
         <groupId>org.springframework.security.oauth</groupId>
         <artifactId>spring-security-oauth2</artifactId>
-            <version>2.0.10.RELEASE</version>
+            <version>2.0.17</version>
         </dependency>
 
         <!--		// Spring Boot Starter -->
